--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>dev.kashtan</groupId>
     <artifactId>tic-tac-toe</artifactId>
-    <version>1.0</version>
+    <version>2.0-SNAPSHOT</version>
 
     <name>Tic-Tac-Toe</name>
     <description>Simple console game tic-tac-toe</description>
