Update proguard-rules.conf: excludes enum constants

--- a/proguard-rules.conf
+++ b/proguard-rules.conf
@@ -5,4 +5,12 @@
     public static void main(java.lang.String[]);
 }
 
+-keepclasseswithmembers class kashtan.dev.tictactoe.model.PlayerType{
+    *;
+}
+
+#-keepclasseswithmembers class * extends java.lang.Enum{
+#    *;
+#}
+
 -repackageclasses 'a'
