Add UserInterface command line argument

--- a/proguard-rules.conf
+++ b/proguard-rules.conf
@@ -9,6 +9,10 @@
     *;
 }
 
+-keepclasseswithmembers class kashtan.dev.tictactoe.model.UserInterface{
+    *;
+}
+
 #-keepclasseswithmembers class * extends java.lang.Enum{
 #    *;
 #}
