--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
                 <proguardInclude>${basedir}/proguard-rules.conf</proguardInclude>
                 <libs>
                     <lib>${java.home}/jmods/java.base.jmod</lib>
+                    <lib>${java.home}/jmods/java.desktop.jmod</lib>
                 </libs>
             </configuration>
             <dependencies>
