--- a/proguard-rules.conf
+++ b/proguard-rules.conf
@@ -5,13 +5,10 @@
     public static void main(java.lang.String[]);
 }
 
--keepclasseswithmembers class kashtan.dev.tictactoe.model.PlayerType{
+-keepclasseswithmembers enum kashtan.dev.tictactoe.model.config.*{
     *;
 }
 
--keepclasseswithmembers class kashtan.dev.tictactoe.model.UserInterface{
-    *;
-}
 
 #-keepclasseswithmembers class * extends java.lang.Enum{
 #    *;
